# substrate-oracle

./: .gitignore  Cargo.toml
node/src/: chain_spec.rs
pallets/oracle/: Cargo.toml
pallets/oracle/src/: lib.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
