[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0-rc5'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
pallet-aura = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
pallet-balances = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
frame-support = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
pallet-grandpa = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
pallet-randomness-collective-flip = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
pallet-sudo = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
frame-system = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
pallet-timestamp = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
pallet-transaction-payment = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
frame-executive = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" , default-features = false, version = "2.0.0-rc5"}
sp-consensus-aura = { version = "0.8.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5"  }
sp-core = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" , default-features = false, version = "2.0.0-rc5"}
sp-offchain = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-runtime = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-session = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-std = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-transaction-pool = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-version = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
pallet-oracle = { path = "../pallets/oracle", default-features = false }
template = { version = "2.0.0-rc5", default-features = false, path = "../pallets/template", package = "pallet-template" }

[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
tag = 'v2.0.0-rc5'
version = '1.0.5'

[features]
default = ['std']
std = [
    'pallet-aura/std',
    'pallet-balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'serde/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'pallet-sudo/std',
    'frame-system/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'template/std',

    "pallet-oracle/std",
]
