[package]
name = "pallet-oracle"
version = "0.1.0"
authors = ["hammeWang <dsw0602@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }

sp-std = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-io = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-runtime = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }

frame-support = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
frame-system = { version = "2.0.0-rc5", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
lite-json = { version = "0.1", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-io/std",
    "sp-std/std",
    "sp-runtime/std",
    "lite-json/std",
]
